@@ -6978,6 +6978,13 @@
 	* configs/spark: Refresh all spark configurations (2014-3-11).
 	* arch/arm/src/tiva/chip/tm4c_memorymap.h:  Fix typos reported by
 	  Daniel Pereira de Carvalho (2014-2-12).
+	* arch/arm/src/sam34/sam_emac.c:  Add an Ethernet MAC driver for the
+	  SAM4E.  The initial checkin is essentially the SAMA5D3 EMAC driver
+	  with naming changes as appropriate (2014-3-12).
 	* arch/arm/src/sam34/sam_cmcc.c:  Add logic to manage the Cortex-M
 	  Cache Control block.  Untested on initial check-in (2014-3-12).
-
+	* arch/arm/src/sam34/sam_emac.c:  Fix EMAC pin configuration (was been
+	  set up for RMII instead of MII).  Now the driver EMAC appears to be
+	  functional (2014-3-13).
+	* configs/sam4e-ek/nsh:  Networking support is now enabled by default
+	  in the NSH configuration (2014-3-13).
